# task-scope

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/apps/core/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/management/commands/: sync_backlog.py
backend/apps/core/migrations/: 0001_initial.py  0002_specdocument_ticketevaluation.py  0003_ticketevaluation_ambiguity_score_and_more.py  0004_add_excluded_status.py  0005_excluded_status_per_project.py  0006_add_estimated_days.py  0007_add_resolution_type.py  0008_comment_attachments_and_eval_count.py  0009_ticket_custom_fields.py  0010_comment_tags_and_remove_spec.py  0011_coderepository.py  0012_add_status_change_tracking.py  0013_add_pinned_ticket.py  0014_fix_synced_comment_posted_at.py  0015_add_jira_space.py  0016_add_jira_space_fk.py  0017_add_categories_milestones.py  0018_add_parent_ticket.py  0019_backlogspace_sync_interval_minutes_ticket_is_watched.py  0020_tickettag_ticket_custom_tags.py
backend/apps/core/services/: backlog_client.py  evaluation_service.py  jira_client.py  jira_sync_service.py  sync_service.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  testing.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/mysql/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  externals.d.ts
scripts/: README.md  eval_proxy.py
(+44 files in other folders)
