[project]
name = "task-scope"
version = "0.1.0"
description = "Backlog チケットを収集し全体進捗を可視化するダッシュボード"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<7.0",
    "djangorestframework>=3.16,<4.0",
    "django-cors-headers>=4.6,<5.0",
    "django-environ>=0.12,<1.0",
    "mysqlclient>=2.2,<3.0",
    "httpx>=0.28,<1.0",
    "django-filter>=25.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
    "django-stubs>=5.1,<6.0",
    "djangorestframework-stubs>=3.15,<4.0",
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-cov>=6.0,<7.0",
    "factory-boy>=3.3,<4.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "environ",
    "environ.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
